2019-02-13  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_runtests.m: Return a struct of results

	* misc/test/stk_runtests.m: Return a struct of results.

2019-02-04  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_init: Deprecate the syntax with do_estim_lnv

	* param/estim/stk_param_init.m: Remove the syntax with
	do_estim_lnv from the documention.  Explain in the source code
	that it is deprecated, and add a warning.
	* examples/03_miscellaneous/stk_example_misc03.m: Remove useless
	do_estim_lnv argument.
	* examples/03_miscellaneous/stk_example_misc06.m: Idem.
	* NEWS.md: Announce this change.  This goes nicely with a similar
	change made to the stk_model_gpposterior class.

2019-02-03  Julien Bect  <julien.bect@centralesupelec.fr>

	Rename two examples

	* examples/03_miscellaneous/stk_example_misc05.m: Renamed from
	misc06.  This one is going to be release in STK 2.6.0.
	* examples/03_miscellaneous/stk_example_misc06.m: Renamed from
	misc05.  This one is not goind to be release in STK 2.6.0.
	* NEWS.md: Fix corresponding news item.

2019-01-28  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_plot_shadedci.m: Fix CI legend

	* misc/plot/stk_plot_shadedci.m: Fix CI legend.

2019-01-23  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_estim_remlgs.m: Make it work for parameter objects too

	* param/estim/stk_param_estim_remlgs.m: Make it work for parameter
	objects too.

2019-01-22  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_estim_optim.m: Add safety nets.

	* param/estim/stk_param_estim_optim.m: Add safety nets around the
	call to the optimizer.  If the final value is not better than the
	initial one, issue an error.

	stk_param_estim: Fix a small bug relative to the 'info' ouput.

	* param/estim/stk_param_estim.m: Fix bug.
	* param/estim/stk_param_estim_optim.m: Fix bug.

2019-01-21  Julien Bect  <julien.bect@centralesupelec.fr>

	Extract stk_param_init's core to a separate (internal) function
